delete / modulariazed errors/params
